<resources>
    <string name="app_name">News</string>
    /***Yasmeen***/
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup">signUp</string>
    <string name="home">Home</string>
    /***Yasmeen***/
    <!-- TODO: Remove or change this placeholder text -->


    /***Nada***/
    <string name="userName_regist">Name</string>
    <string name="email_regist">Email</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password_regist">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    /***Nada***/

    /***Ward***/

    <string name="internet_connection_is_restored">Internet Connection is restored</string>
    <string name="internet_connection_is_lost">Internet Connection is lost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_that_you_want_to_delete_that_news_from_favorites">Are you sure that you want to delete that News from favorites</string>
    <string name="warning">Warning</string>
    <string name="no_matching_results">No Matching Results</string>

    /***Ward***/

    /***Fatma***/

    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure that you want to logout</string>
    <string name="attention">Attention</string>
    <string name= "Login_Successfully" >Login Successfully</string>
    <string name= "Registration_successfully" >Registration successfully</string>
    <string name="Invalid_Registration">Invalid Registration, try again</string>

    /***Fatma**/

</resources>